--- a/arch/arm64/boot/dts/qcom/msm8937-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-pinctrl.dtsi
@@ -1824,8 +1824,8 @@
 			};
 		};
 
-		cam_sensor_rear_reset: cam_sensor_rear_reset {
-			/* RESET */
+		cam_sensor_rear_default: cam_sensor_rear_default {
+			/* RESET, STANDBY */
 			mux {
 				pins = "gpio36";
 				function = "gpio";
@@ -1838,8 +1838,8 @@
 			};
 		};
 
-		cam_sensor_rear_reset_sleep: cam_sensor_rear_reset_sleep {
-			/* RESET */
+		cam_sensor_rear_sleep: cam_sensor_rear_sleep {
+			/* RESET, STANDBY */
 			mux {
 				pins = "gpio36";
 				function = "gpio";
