--- a/arch/arm64/boot/dts/qcom/xiaomi-santoni.dts
+++ b/arch/arm64/boot/dts/qcom/xiaomi-santoni.dts
@@ -36,7 +36,7 @@
 	};
 };
 
-&qpnp_smbcharger {
+&qpnp_charger {
 	qcom,battery-data = <&qrd_batterydata>;
 	qcom,float-voltage-mv = <4400>;
 	qcom,chg-inhibit-fg;
@@ -93,7 +93,10 @@
 &firmware {
 	android {
 		fstab {
-			/delete-node/ vendor;
+			vendor {
+				dev = "/dev/block/platform/soc/7824900.sdhci/by-name/cust";
+				fsmgr_flags = "wait";
+			};
 			system {
 				compatible = "android,system";
 				dev = "/dev/block/platform/soc/7824900.sdhci/by-name/system";
