--- a/arch/arm64/boot/dts/qcom/xiaomi-santoni.dts
+++ b/arch/arm64/boot/dts/qcom/xiaomi-santoni.dts
@@ -36,7 +36,7 @@
 	};
 };
 
-&qpnp_charger {
+&qpnp_smbcharger {
 	qcom,battery-data = <&qrd_batterydata>;
 	qcom,float-voltage-mv = <4400>;
 	qcom,chg-inhibit-fg;
